force-app/main/default/objects/amc__Billing_Event_Item__c/amc__Billing_Event_Item__c.object-meta.xml
<CustomObject>
    <description>The Billing Event Item object is a child object to the Billing Event Object and enables users to specify the line items relating to a billing event (e.g. invoice / credit)</description>
    <label>Billing Event Item</label>
    <nameField>
        <label>Billing Event Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Event Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>