force-app/main/default/objects/amc__Billing_Event_Item__c/fields/amc__Billing_Event__c.field-meta.xml
<CustomField>
    <fullName>amc__Billing_Event__c</fullName>
    <inlineHelpText>Links to the parent Billing Event record this item relates to</inlineHelpText>
    <label>Billing Event</label>
    <referenceTo>amc__Billing_Event__c</referenceTo>
    <relationshipLabel>Billing Event Items</relationshipLabel>
    <relationshipName>Billing_Event_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>