force-app/main/default/objects/amc__Billing_Event_Item__c/fields/amc__Milestone__c.field-meta.xml
<CustomField>
    <fullName>amc__Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the Milestone this Event Item relates to.</description>
    <inlineHelpText>Identifies the Milestone this Event Item relates to.</inlineHelpText>
    <label>Milestone</label>
    <referenceTo>amc__Milestone__c</referenceTo>
    <relationshipLabel>Billing Event Items</relationshipLabel>
    <relationshipName>Billing_Event_Items</relationshipName>
    <type>Lookup</type>
</CustomField>