force-app/main/default/objects/amc__Billing_Event_Item__c/listViews/amc__All.listView-meta.xml
<ListView>
    <fullName>amc__All</fullName>
    <columns>NAME</columns>
    <columns>amc__Description__c</columns>
    <columns>amc__Billing_Event__c</columns>
    <columns>amc__Amount__c</columns>
    <columns>amc__Tax_Amount__c</columns>
    <columns>amc__Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>